apps/chartmuseum/env/k3s-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartmuseum-ingress
  namespace: chartmuseum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "chartmuseum.cluster.edward.sydney"
      secretName: "tls-secrets"
  rules:
    - host: "chartmuseum.cluster.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: chartmuseum
                port:
                  number: 8899
